--- a/Instructions/Labs/AZ-203_01_lab.md
+++ b/Instructions/Labs/AZ-203_01_lab.md
@@ -10,6 +10,7 @@ lab:
 ## Lab scenario
 
 Your organization is seeking a way to automatically create virtual machines (VMs) to run tasks and immediately terminate. You are tasked with evaluating multiple compute services in Microsoft Azure and determining which service can help you automatically create virtualized machines and install custom software on those machines. As a proof of concept, you have decided to try to create VMs from VHD images and container images so that you can compare the two solutions. To keep your proof of concept simple, you will create a special “IP check” application, written in .NET Core, that you will automatically deploy to your machines. Your proof of concept will evaluate the Azure Container Instances and Azure Virtual Machines services.
+Yes
 
 ## Objectives
 
